Rule endpoint implemented
