# Part2/swagger/spring-server/src/main/java/ch/heigvd/amt/entities/RuleEntity.java
@@ -1,0 +1,60 @@
+package ch.heigvd.amt.entities;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import java.io.Serializable;
+
+@Entity
+public class RuleEntity implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private long id;
+
+    private String type;
+    private String awardBadge;
+    private String pointScale;
+    private Integer amount;
+
+    public long getId() {
+        return id;
+    }
+
+    public void setId(long id) {
+        this.id = id;
+    }
+
+    public String getType() {
+        return type;
+    }
+
+    public void setType(String type) {
+        this.type = type;
+    }
+
+    public String getAwardBadge() {
+        return awardBadge;
+    }
+
+    public void setAwardBadge(String awardBadge) {
+        this.awardBadge = awardBadge;
+    }
+
+    public String getPointScale() {
+        return pointScale;
+    }
+
+    public void setPointScale(String pointScale) {
+        this.pointScale = pointScale;
+    }
+
+    public Integer getAmount() {
+        return amount;
+    }
+
+    public void setAmount(Integer amount) {
+        this.amount = amount;
+    }
+}
